# CubeSimRS

./: Cargo.toml  LICENSE  README.md
benches/: facelet_cube.rs  geometric_cube.rs  thistlethwaite.rs
src/: generic_cube.rs  generic_solver.rs  geometric_cube.rs  iddfs.rs  lib.rs  main.rs  prelude.rs  scramble_parser.rs  test.rs  thistlethwaite.rs
src/facelet_cube/: cube.rs  mod.rs  moves.rs
src/generic_cube/: cube.rs  mod.rs
src/geometric_cube/: cube.rs  mod.rs  moves.rs  sticker.rs  turn.rs
src/move_converter/: converter.rs  mod.rs
src/scramble_parser/: mod.rs
tests/: 2x2x2.rs  3x3x3.rs  4x4x4.rs  cube.rs  geometric_cube.rs  move_converter.rs  scramble_parser.rs  thistlethwaite.rs
