[package]
name = "cubesim"
description = "NxNxN Rubik's Cube simulator (and eventually solver) written entirely in Rust."
version = "0.0.2"
authors = ["Vincent Wong <vincent@vwong.dev>"]
edition = "2018"
keywords = ["rubiks", "cube", "rubiks_cube"]
license = "MIT"
repository = "https://github.com/V-Wong/CubeSim2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.24.0"
cgmath = "0.18.0"
clippy = "0.0.302"
derive_more = "0.99.16"
lazy_static = "1.4.0"
test-case = "1.2.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "geometric_cube"
harness = false
