[package]
name = "cubesim"
description = "Rubik's Cube simulation and solving library."
version = "0.0.7"
authors = ["Vincent Wong <vincent@vwong.dev>"]
edition = "2018"
keywords = ["rubiks", "cube", "rubiks_cube"]
license = "MIT"
repository = "https://github.com/V-Wong/CubeSimRS/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.24.0"
cgmath = "0.18.0"
derive_more = "0.99.16"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3.5"
clippy = "0.0.302"
test-case = "1.2.0"

[[bench]]
name = "facelet_cube"
harness = false

[[bench]]
name = "geometric_cube"
harness = false

[[bench]]
name = "thistlethwaite"
harness = false
